handle of entities and docker configuration

--- a/backend/.env
+++ b/backend/.env
@@ -28,6 +28,8 @@ APP_SECRET=d15cc7a71a6d33a1f923b2a9b13321de
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL=mysql://cinephoria:cinephoria@mysql-db:3306/cinephoria
+DATABASE_URL="mysql://cinephoria:cinephoria@mysql:3306/cinephoria?serverVersion=8.0"
+
+
 
 ###< doctrine/doctrine-bundle ###
