--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,49 +1,78 @@
-version: "3.8"
+version: "3.9"
 
 services:
-  backend:
-    build:
-      context: ./backend
-    container_name: symfony-backend
-    volumes:
-      - ./backend:/var/www/html
-    ports:
-      - "9000:9000" # Liaison explicite pour Symfony
-    expose:
-      - "9000"
-    depends_on:
-      - db
-
-  frontend:
-    build:
-      context: ./frontend
-    container_name: react-frontend
-    ports:
-      - "3000:80"
-
-  db:
-    image: mysql:8
+  mysql:
+    image: mysql:8.0
     container_name: mysql-db
     environment:
-      MYSQL_ROOT_PASSWORD: root
+      MYSQL_ROOT_PASSWORD: rootpassword
       MYSQL_DATABASE: cinephoria
-      MYSQL_USER: cinephoria
-      MYSQL_PASSWORD: cinephoria
+      MYSQL_USER: cineuser
+      MYSQL_PASSWORD: cinepassword
     ports:
       - "3306:3306"
     volumes:
-      - db-data:/var/lib/mysql
+      - mysql-data:/var/lib/mysql
+    networks:
+      - app-network
+
+
+  # phpmyadmin:
+  #   image: phpmyadmin/phpmyadmin
+  #   container_name: phpmyadmin
+  #   environment:
+  #     PMA_HOST: mysql
+  #     PMA_USER: root
+  #     PMA_PASSWORD: rootpassword
+  #   ports:
+  #     - "8080:80"
+  #   depends_on:
+  #     - mysql
+  #   networks:
+  #     - app-network
+  # # React Frontend
+  # frontend:
+  #   build:
+  #     context: ./frontend
+  #   container_name: react-frontend
+  #   ports:
+  #     - "3000:80"
+  #   networks:
+  #     - app-network
+
+  symfony:
+    build:
+      context: ./backend
+    container_name: symfony-backend
+    environment:
+      DATABASE_URL: mysql://cineuser:cinepassword@mysql:3306/cinephoria
+    volumes:
+      - ./backend:/var/www/html
+    ports:
+      - "9000:9000"
+    depends_on:
+      - mysql
+    networks:
+      - app-network
 
   nginx:
     image: nginx:latest
     container_name: symfony-nginx
-    ports:
-      - "8000:80"
     volumes:
       - ./backend/public:/var/www/html/public
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    ports:
+      - "8000:80"
     depends_on:
-      - backend
+      - symfony
+    networks:
+      - app-network
 
 volumes:
-  db-data:
+  mysql-data:
+
+networks:
+  app-network:
+    driver: bridge
+
+
