--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,47 +15,7 @@ services:
       - "3306:3306"
     volumes:
       - mysql-data:/var/lib/mysql
-    networks:
-      - app-network
 
-
-  # phpmyadmin:
-  #   image: phpmyadmin/phpmyadmin
-  #   container_name: phpmyadmin
-  #   environment:
-  #     PMA_HOST: mysql
-  #     PMA_USER: root
-  #     PMA_PASSWORD: rootpassword
-  #   ports:
-  #     - "8080:80"
-  #   depends_on:
-  #     - mysql
-  #   networks:
-  #     - app-network
-  # # React Frontend
-  # frontend:
-  #   build:
-  #     context: ./frontend
-  #   container_name: react-frontend
-  #   ports:
-  #     - "3000:80"
-  #   networks:
-  #     - app-network
-
-  symfony:
-    build:
-      context: ./backend
-    container_name: symfony-backend
-    environment:
-      DATABASE_URL: mysql://cineuser:cinepassword@mysql:3306/cinephoria
-    volumes:
-      - ./backend:/var/www/html
-    ports:
-      - "9000:9000"
-    depends_on:
-      - mysql
-    networks:
-      - app-network
 
   frontend:
     build:
@@ -76,8 +36,7 @@ services:
       - cinephoria_network
     ports:
       - "9000:9000"
-    depends_on:
-      - db
+  
 
   nginx:
     image: nginx:latest
@@ -89,17 +48,12 @@ services:
     volumes:
       - ./backend/public:/var/www/html/public
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-    ports:
-      - "8000:80"
-    depends_on:
-      - symfony
-    networks:
-      - app-network
+  
 
 networks:
   cinephoria_network:
     driver: bridge
 
 volumes:
-  db-data:
+  mysql-data:
 
