--- a/backend/config/packages/nelmio_cors.yaml
+++ b/backend/config/packages/nelmio_cors.yaml
@@ -1,9 +1,12 @@
 nelmio_cors:
-  defaults:
-    allow_origin: ['*']  # Autorise toutes les origines, vous pouvez remplacer '*' par une URL spécifique, comme 'http://localhost:3000' pour votre frontend React
-    allow_methods: ['GET', 'POST', 'PUT', 'DELETE', 'OPTIONS']  # Méthodes HTTP autorisées
-    allow_headers: ['Content-Type', 'Authorization', 'X-Requested-With']  # En-têtes autorisés
-    max_age: 3600  # Durée de mise en cache de la pré-requête OPTIONS
-  paths:
-    '^/api/':  # Appliquer la configuration uniquement sur les routes API
-      allow_origin: ['*']
+    defaults:
+        allow_credentials: false
+        allow_origin: ['http://localhost:3001']  # Autoriser uniquement le frontend React
+        allow_headers: ['Content-Type', 'Authorization']
+        allow_methods: ['GET', 'POST', 'PUT', 'DELETE', 'OPTIONS']
+        expose_headers: []
+        max_age: 3600
+    paths:
+        '^/api/':  # Applique les règles CORS uniquement pour les routes commençant par /api
+            allow_origin: ['*']  # Permet à toutes les origines d'accéder à l'API
+
