--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,14 +15,19 @@ services:
       - mysql-data:/var/lib/mysql
 
 
-  frontend:
+  react-frontend:
     build:
       context: ./frontend
     container_name: react-frontend
     ports:
       - "3000:3000"
+    volumes:
+      - ./frontend:/usr/src/app
+    working_dir: /usr/src/app
+    command: npm start  
+      
 
-  backend:
+  symfony-backend:
     build:
       context: ./backend
     container_name: symfony-backend
@@ -32,16 +37,19 @@ services:
       - ./backend:/var/www/html
     ports:
       - "9000:9000"
-  
+    command: php -S 0.0.0.0:9000 -t public
 
   nginx:
     image: nginx:latest
     container_name: symfony-nginx
     ports:
       - "8000:80"
+    depends_on:
+      - symfony-backend
+      - react-frontend
     volumes:
-      - ./backend/public:/var/www/html/public
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      # On monte le fichier default.conf créé précédemment
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
   
 
 
