--- a/backend/config/packages/framework.yaml
+++ b/backend/config/packages/framework.yaml
@@ -8,9 +8,11 @@ framework:
     # Enables session support. Note that the session will ONLY be started if you read or write from it.
     # Remove or comment this section to explicitly disable session support.
     session:
-        handler_id: null
-        cookie_secure: auto
-        cookie_samesite: lax
+        handler_id: null # Utilise le gestionnaire par défaut basé sur les fichiers
+        storage_factory_id: session.storage.factory.native
+        cookie_secure: auto # Active la sécurité si HTTPS est utilisé
+        cookie_samesite: lax # Compatible avec les requêtes multi-origines
+        cookie_lifetime: 3600 # Durée de vie de la session (en secondes)
 
     #esi: true
     #fragments: true
