--- a/backend/composer.json
+++ b/backend/composer.json
@@ -29,6 +29,9 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.7",
+        "phpunit/phpunit": "^10.5",
+        "symfony/browser-kit": "6.4.*",
+        "symfony/dom-crawler": "6.4.*",
         "symfony/maker-bundle": "^1.61",
         "symfony/var-dumper": "6.4.*"
     },
