nginx file changes

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -19,4 +19,14 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
     }
+      # Configuration de PHP pour Symfony
+    location ~ ^/index\.php(/|$) {
+        fastcgi_pass symfony-backend:9000;  # Vérifie que ce conteneur est bien lié
+        fastcgi_param SCRIPT_FILENAME /var/www/html/public$fastcgi_script_name;
+        include fastcgi_params;
+    }
+
+    # Autres configurations si nécessaire
+    error_log /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
 }
