--- a/backend/.env
+++ b/backend/.env
@@ -29,7 +29,7 @@ APP_SECRET=d15cc7a71a6d33a1f923b2a9b13321de
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="mysql://cinephoria:cinephoria@mysql-db:3306/cinephoria?serverVersion=8.0.31&charset=utf8mb4"
-DATABASE_URL="mysql://xwkw50i6fay8h8dm:vdp6a1laup0bucv1@qzkp8ry756433yd4.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/fa88g41hzuc8fwhv"
+# DATABASE_URL="mysql://xwkw50i6fay8h8dm:vdp6a1laup0bucv1@qzkp8ry756433yd4.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/fa88g41hzuc8fwhv"
 
 
 
