--- a/backend/config/packages/nelmio_cors.yaml
+++ b/backend/config/packages/nelmio_cors.yaml
@@ -1,12 +1,16 @@
 nelmio_cors:
     defaults:
-        allow_origin: ['http://localhost:3001', 'http://127.0.0.1:3001']
+        allow_origin: ['http://localhost:3001', 'http://127.0.0.1:3001', 'http://57.129.134.59:3000']
         allow_credentials: true
         allow_methods: ['GET', 'POST', 'PUT', 'DELETE', 'OPTIONS']
         allow_headers: ['Content-Type', 'Authorization']
         expose_headers: []
         max_age: 3600
-        hosts: ['^127\.0\.0\.1:\d+$', '^localhost:\d+$', '^192\.168\.\d+\.\d+:\d+$']  # Ajoutez l'IP de votre machine
+        hosts:
+            - '^127\.0\.0\.1:\d+$'
+            - '^localhost:\d+$'
+            - '^192\.168\.\d+\.\d+:\d+$'
+            - '^57\.129\.134\.59:\d+$'  # Ajoutez l'IP de votre machine
     paths:
         '^/api/':
             allow_origin: ['*']
