--- a/backend/config/packages/nelmio_cors.yaml
+++ b/backend/config/packages/nelmio_cors.yaml
@@ -1,6 +1,6 @@
 nelmio_cors:
     defaults:
-        allow_origin: ['http://localhost:3001', 'http://127.0.0.1:3001', 'http://57.129.134.59:3000']
+        allow_origin: ['*']
         allow_credentials: true
         allow_methods: ['GET', 'POST', 'PUT', 'DELETE', 'OPTIONS']
         allow_headers: ['Content-Type', 'Authorization']
