--- a/mobile/cinephoria_mobile_app/pubspec.yaml
+++ b/mobile/cinephoria_mobile_app/pubspec.yaml
@@ -30,9 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  path_provider: ^2.0.9  
+  shared_preferences: ^2.0.6
+  dio: ^5.8.0
+  cookie_jar: ^3.0.1  
   http: ^0.13.4
   qr_flutter: ^4.0.0 
-
+  
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -43,12 +47,15 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+
+
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  shared_preferences: ^2.0.11
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
